# htmx-sorta

./: Cargo.toml  README.md  flake.nix  justfile  justfile.custom  tailwind.config.js
.cargo/: config.toml
.config/flakebox/: id
.github/workflows/: ci.yml  flakebox-ci.yml
misc/git-hooks/: commit-msg  pre-commit
nix/: lib.nix
src/: db.rs  error.rs  fragment.rs  main.rs  opts.rs  rate_limit.rs  response.rs  routes.rs  service.rs  sortid.rs  style.css  util.rs
src/rate_limit/: conventional.rs  pre.rs  xor_hash.rs
static/: script-htmx-send-error.js  script-twind.js  script.js  style-htmx-send-error.css  style.css  tailwind.css
