[package]
name = "htmx-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = "line-tables-only"
lto = "off"

[profile.release]
debug = "line-tables-only"
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
hyper = "0.14.27"
maud = { version = "0.25.0", features = [ "axum" ] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
redb = "1.1.0"
dotenv = "0.15.0"
clap = { version = "4.4.0", features = ["derive"] }
lettre = { version = "0.10.4", default-features = false, features = ["rustls-tls", "smtp-transport", "hostname", "builder"]}
tap = "1.0.1"
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.3", features = ["tracing", "trace"] }
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }
resiter = "0.5.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
