[package]
name = "htmx-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = "line-tables-only"
lto = "off"

[profile.release]
debug = "line-tables-only"
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
astra = { git = "https://github.com/dpc/astra", rev = "f5ec32268e9d20f0c4d18f25691dba2b1b7c5ac1" }
bincode = "1.3.3"
dotenv = "0.15.0"
clap = { version = "4.4.0", features = ["derive"] }
hyper = "0.14.27"
maud = { version = "0.25.0", features = [ "axum" ] }
matchit = "0.7.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
redb = "1.1.0"
tap = "1.0.1"
serde = { version = "1.0.188", features = ["derive"] }
resiter = "0.5.0"
serde_json = "1.0.105"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
