[package]
name = "htmx-sorta"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
astra = { git = "https://github.com/dpc/astra", rev = "f135e4c8be0409d371218669bcdb13566f35f116" }
bincode = "1.3.3"
dotenv = "0.15.0"
clap = { version = "4.4.0", features = ["derive", "env"] }
hyper = "0.14.27"
maud = { version = "0.25.0", features = [ "axum" ] }
matchit = "0.7.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
redb = { version = "2.0.0", path = "../redb", features = ["bincode"] }
tap = "1.0.1"
serde = { version = "1.0.188", features = ["derive"] }
resiter = "0.5.0"
serde_json = "1.0.105"
serde_urlencoded = "0.7.1"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"



[profile.dev]
debug = "line-tables-only"
lto = "off"

[profile.ci]
inherits = "dev"
incremental = false

[profile.release]
debug = "line-tables-only"
lto = "fat"
codegen-units = 1

# Workaround: https://github.com/rust-lang/cargo/issues/12457 which causes
#             https://github.com/ipetkov/crane/issues/370
[profile.dev.build-override]
debug = false
[profile.ci.build-override]
debug = false
[profile.release.build-override]
debug = false
